css/custom-style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,900|Roboto:300,400,500,700,900');

body{
	font-family: 'Roboto', sans-serif;
	font-size: 14px;
	line-height: 1.2;
	background: url(../img/Body_BG.svg) no-repeat;
    background-size: cover;
    background-position: center right;
    background-attachment: fixed;
    overflow-x: hidden;
}
.header-back{
    height: 100%;
    padding: 0;
    margin: 0;
}
.almadar_logo{
	width: 80px;
	height: auto;
}
#main-menu{
  margin-left: 7px;
}
.menu-new{
  padding: 0.5rem;
  transition: .2s;
}
.menu-new a{
	color: #fff;
  margin: 0 15px !important;
  font-family: 'Montserrat', sans-serif;
  font-size: 13px;
  border-bottom: 5px solid #6bc4e900;
  padding-left: 0px !important;
  padding-right: 0px !important;
  padding-bottom: 5px !important;
}
.menu-new a:hover{
  text-decoration: none !important;
}
.menu-new li:hover a{
	color: #6bc4e9;
	border-bottom: 2px solid #6bc4e9;
}
.menu
.menu-custom-pro{
	/*background: #fff !important;
	webkit-box-shadow: 0px 6px 23px -11px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 6px 23px -11px rgba(0,0,0,0.75);
	box-shadow: 0px 6px 23px -11px rgba(0,0,0,0.75);*/
}
.menu-custom{
  padding-top: 1rem;
  transition: .2s;
}
.menu-custom ul{
	/*margin-left: 15px;*/
}
.menu-custom a{
	color: #22115c;
	margin: 0 15px !important;
    font-family: 'Montserrat', sans-serif;
    font-size: 13px;
    border-bottom: 5px solid #6bc4e900;
    padding-left: 0px !important;
    padding-right: 0px !important;
    padding-bottom: 5px !important;
}
.menu-custom li:hover a{
	color: #6bc4e9;
	border-bottom: 2px solid #6bc4e9;
}
.bg-none{
	background: none !important;
}
.btn-header {
    color: #ffffff !important;
    background-color: #6bc4e8 !important;
    border-color: #6bc4e8 !important;
    border-radius: 0px !important;
    padding: 5px 15px !important;
    font-size: 15px !important;
}
.ml-10{
	margin-left: 8% !important;
}
.social-media{
	opacity: 1 !important;
	padding: 10px !important;
}
.pa-5{
	padding: 5px !important;
}
.ptb-10{
	padding: 10px 0;
}
.sm-icon-fb:hover{
	color: #22115c !important;
}
.font-w-400{
	font-weight: 400px;
}
.letter-spc-2{
	letter-spacing: -2px;
}
.sm-icon-tw{
	color: #fff !important;
	border: 2px solid #5ec3e500;
	border-radius: 50%;
}
.sm-icon-tw:hover{
	color: #5ec3e5 !important;
	border: 2px solid #5ec3e5;
	border-radius: 50%;
}
.sm-icon-tw-new{
	color: #5ec3e6 !important;
	border: 2px solid #5ec3e6;
	border-radius: 50%;
}
.sm-icon-tw-new:hover{
	color: #22115c !important;
	border: 2px solid #22115c;
	border-radius: 50%;
}
.fs-22{
	font-size: 22px;
}
.fs-10{
	font-size: 10px;
}
.fs-12{
	font-size: 12px;
	line-height: 15px;
}
.fs-14 {
	font-size: 14px;
}
.fs-15 {
	font-size: 15px;
}
.w-24{
	width: 36px;
	height: 36px;
}
.header-bar{
	width: 100%;
	background: url('../img/header-bar.png') no-repeat;
	height: 24px;
	background-size: 100%;
}
.purple-color {
    color: #21145f;
}
.second-color{
	color: #6bc4e8;
}
.prmy-font{
	font-family: 'Montserrat', sans-serif;
}
.fw-600{
	font-weight: 600 !important;
}
.sc-font{
	font-family: 'Roboto', sans-serif;
}
.thumbnail {
  position: relative;
  width: 100%;
}

.thumbnail img{
	width: 100%;
    margin: 0 auto;
}
.thumbnail-news-section {
  position: relative;
  width: 100%;
}
.thumbnail-news-section img{
  width: 114px;
  height: 116px;
  margin: 0 auto;
  border: 1px solid #22115c;
}
.thumb-list{
	border-bottom: 1px solid #22115c;
}
.h_division_title h6 {
	margin: 10px;
    text-align: right;
    font-size: 12px!important;
    line-height: 40px !important;
    font-family: 'Montserrat', sans-serif;
    text-transform: uppercase;
    font-weight: 400
}
.h_division_title {
    position: absolute;
    color: #FFF;
    background: rgba(0,0,0,0.7);
    bottom: 0;
    z-index: 9;
    right: 0;
    height: 55px !important;
    clip-path: polygon(40px 0, 100% 0%, 100% 100%, 0% 100%);
	padding: 0px 0px 0px 32px;
}
.navbar-toggler {
  background: url('../img/menu-toggle.png') no-repeat !important;
  height: 50px !important;
  width: 50px !important;
}
.navbar-toggler:hover {
  background: url('../img/menu-toggle-hover.png') no-repeat !important;
  height: 50px !important;
  width: 50px !important;
}
.h_division_title:hover{
  background-color: rgba(34, 17, 92, 0.74);
  cursor: pointer;
}
.news-section{
	background: url('../img/HomeBlogCover.svg') no-repeat;
	width: 100%;
	min-height: 700px;
	background-size: cover;
	padding: 80px;
}
.head{
	background: url('../img/BlogCover.svg') no-repeat;
	width: 100%;
	height: 55px;
	background-size: cover;
	color: #fff;
	line-height: 55px;
  font-weight: 500;
}
.slider-heading{
	font-size: 52px;
    font-weight: 500;
}
.slider-content {
    font-weight: 300;
    font-size: 25px;
}
.thumb-box {
    height: 470px;
    background: #fcfcfc;
    overflow-y: scroll;
    border-bottom: 5px solid #22115c;
}
/*-- About Us Page --*/
h1.slider-heading {
    font-family: "Montserrat";
    font-weight: 500;
}
.header-about {
    min-height: 350px;
    padding: 0;
    margin: 0;
}
div.about-bg {
    background: url(../img/About/HeadingBG.png);
    background-size: cover;
}
div#msg-chairman {
    margin-top: -110px;
    margin-bottom: 2rem;
}
div#msg-chairman, div#msg-md {
    border-bottom: 5px solid #22145e;
    padding-bottom: 10px !important;
    background: #fcfcfc;
}
.footer_title {
    color: #22145e;
    font-size: 16px;
    font-weight: 700;
}
div#about-page {
    color: #22115c;
}
p.msg-md {
    font-size: 13px;
    font-weight: 300;
    color: #21145f;
    line-height: 1.4;
}
div#msg-chairman > div > h4, div#msg-md > div > h4 {
    font-family: 'Montserrat', sans-serif;
}
img.mission-img {
    width: 260px;
    padding: 30px 0 0px;
}
/*-- About Page Style ends --*/

/* width */
.thumb-box::-webkit-scrollbar {
  width: 5px;
}

/* Track */
.thumb-box::-webkit-scrollbar-track {
  background: #f1f1f1; 
}
/* Handle */
.thumb-box::-webkit-scrollbar-thumb {
  background: #22115c; 
}
/* ... */

